# AQuantAI

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start-aquantai.bat  start-aquantai.sh  stop-aquantai.bat  stop-aquantai.sh
.claude/: test-write-access.txt
.codex/: WORKFLOW.md
agent/: __init__.py  base.py
backend/: __init__.py  main.py  safety.py
backtest/: __init__.py  base.py
dashboard/: README.md  __init__.py  base.py  schemas.py
datasource/: base.py  fixtures.py
docs/: agent.md  akshare_ingestion.md  architecture.md  architecture_baseline.md  backtesting.md  benchmark_context.md  canonical_market_price_evidence_characterization.md  canonical_price_comparison_eligibility_preflight.md  cninfo_acquisition_preflight.md  cninfo_acquisition_preflight_decisions.md  company_research_guarded_ai_consolidation_review.md  company_research_priority_comparison_preflight.md  company_research_workspace_preflight.md  controlled_ths_refresh_mvp_preflight.md  dashboard.md  data_model.md  database.md  development.md  development_path_check.md  evidence_ingestion_preflight.md  evidence_intelligence_mvp_preflight.md  factors.md  future_work.md  guarded_ai_research_assistance_preflight.md  hithink_contract_probe.md  hithink_provider_characterization.md  implementation_plan.md  industry_alpha_evidence_ledger.md  industry_beneficiary_workspace_preflight.md  industry_chain_maps.md  industry_thesis_orchestration_preflight.md  investment_candidate_intelligence_preflight.md  local_usage.md  ml.md  (+32 more)
(+494 files in other folders)
