[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquantai"
version = "0.1.0"
description = "A-share AI multi-factor quantitative research platform."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "AQuantAI contributors" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.0",
  "akshare>=1.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = [
  "agent*",
  "backend*",
  "backtest*",
  "dashboard*",
  "datasource*",
  "factors*",
  "ml*",
  "ranking*",
  "scripts*",
]
